Fixed visual que for swiping on mobile

--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -76,6 +76,10 @@ ul li a {
   text-align: center;
 }
 
+.yellow {
+  background-color: yellow;
+}
+
 
 /* DESKTOP NAVBAR */
 
